appId: com.google.android.contacts
---
# Vul gegevens in op basis van meegegeven omgevingsvariabelen
- tapOn:
    id: "com.google.android.contacts:id/floating_action_button" # Uniek ID voor 'Nieuw contact'

# Voornaam invoeren
- tapOn:
    text: "${FIRST_NAME_LABEL}" # Bv. "First name" of "Voornaam"
- inputText: "${FIRST_NAME}"
- hideKeyboard

# Achternaam invoeren
- tapOn:
    text: "${LAST_NAME_LABEL}"
- inputText: "${LAST_NAME}"
- hideKeyboard


# Telefoonnummer invoeren
- tapOn:
    text: "${PHONE_LABEL}"
- eraseText: 2
- inputText: "${PHONE_NUMBER}"
- hideKeyboard

# Opslaan via ID in plaats van tekst
- tapOn: "Save"